Bug 410120 - Krusader does not search correctly if the "Follow links" checkbox is disabled
Summary: Krusader does not search correctly if the "Follow links" checkbox is disabled
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: search (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-07-22 21:33 UTC by Toni Asensi Esteve
Modified: 2019-08-04 17:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Using the test folder: this is a screenshot of the beginning of a search (with the "Follow links" checkbox disabled), before the bug started to show its effects. (52.70 KB, image/png)
2019-07-22 21:40 UTC, Toni Asensi Esteve
Details
After Enter was pressed, those were the results. (68.02 KB, image/png)
2019-07-22 21:41 UTC, Toni Asensi Esteve
Details
This is what happens after the bug started to show its effects. (325.97 KB, image/png)
2019-07-22 21:43 UTC, Toni Asensi Esteve
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Toni Asensi Esteve 2019-07-22 21:33:32 UTC
SUMMARY
When searching, Krusader ignores the "Follow links" checkbox.
               
This can be tried e.g. with a test folder that can be build this way:
    mkdir sysadmin
    mkdir sysadmin/Windows
    mkdir sysadmin/Linux

    echo "Common information." > sysadmin/information.txt
    echo "Windows installation." > sysadmin/Windows/installation.txt
    echo "Linux installation." > sysadmin/Linux/installation.txt

    cd sysadmin/Linux
    ln -s ../Windows "Windows information"
    cd ../..

    cd sysadmin/Windows
    ln -s ../Linux "Linux information"
    cd ../..
Comment 1 Toni Asensi Esteve 2019-07-22 21:40:16 UTC
Created attachment 121684 [details]
Using the test folder: this is a screenshot of the beginning of a search (with the "Follow links" checkbox disabled), before the bug started to show its effects.
Comment 2 Toni Asensi Esteve 2019-07-22 21:41:57 UTC
Created attachment 121685 [details]
After Enter was pressed, those were the results.

Note: In that screenshot the first result is highlighted, that focus allows users to start using immediately e.g. the arrow keys, F3, F4, etc. This doesn't happen nowadays, but that's the effect of another bug (https://bugs.kde.org/show_bug.cgi?id=410118).
Comment 3 Toni Asensi Esteve 2019-07-22 21:43:37 UTC
Created attachment 121686 [details]
This is what happens after the bug started to show its effects.
Comment 4 Toni Asensi Esteve 2019-07-22 21:44:54 UTC
Note: The results of the last screenshot were that way even if the "Follow links" checkbox was disabled.
Comment 5 Toni Asensi Esteve 2019-07-22 21:45:20 UTC
If it can help: the bug effects were seen after the commit 53913d8f92e58b8c7bd4dcbc9192610b6b230373 , maybe seeing its changes (https://cgit.kde.org/krusader.git/commit/?id=53913d8f92e58b8c7bd4dcbc9192610b6b230373) gives a clue.
Comment 6 Toni Asensi Esteve 2019-07-22 22:07:32 UTC
There's a proposed solution in https://phabricator.kde.org/D22666
Comment 7 Toni Asensi Esteve 2019-08-01 05:51:23 UTC
Git commit ce1941db1d8e9f5c5b6ea292cefca97e40f5e7d8 by Toni Asensi Esteve.
Committed on 01/08/2019 at 05:38.
Pushed by asensi into branch 'master'.

Achieve that Krusader searches correctly if the "Follow links" checkbox is disabled

FIXED: [ 410120 ] Krusader does not search correctly if the "Follow links" checkbox is disabled

Differential Revision: https://phabricator.kde.org/D22666

M  +1    -1    krusader/Search/krsearchmod.cpp

https://commits.kde.org/krusader/ce1941db1d8e9f5c5b6ea292cefca97e40f5e7d8
Comment 8 Toni Asensi Esteve 2019-08-01 06:01:38 UTC
Git commit 996f481fe4995fedaa3bd6e11ef2843220a2878f by Toni Asensi Esteve.
Committed on 01/08/2019 at 06:00.
Pushed by asensi into branch 'stable'.

Achieve that Krusader searches correctly if the "Follow links" checkbox is disabled

FIXED: [ 410120 ] Krusader does not search correctly if the "Follow links" checkbox is disabled

Differential Revision: https://phabricator.kde.org/D22666

(cherry picked from commit ce1941db1d8e9f5c5b6ea292cefca97e40f5e7d8)

M  +1    -1    krusader/Search/krsearchmod.cpp

https://commits.kde.org/krusader/996f481fe4995fedaa3bd6e11ef2843220a2878f
Comment 9 Alex Bikadorov 2019-08-04 17:33:00 UTC
Git commit 55a939fe08d2e23f717496d8f94305823946fa88 by Alexander Bikadorov.
Committed on 04/08/2019 at 17:32.
Pushed by abikadorov into branch 'master'.

FileSystem: Document FileItem::isDir()

M  +1    -0    krusader/FileSystem/fileitem.h

https://commits.kde.org/krusader/55a939fe08d2e23f717496d8f94305823946fa88