Achieve that Krusader searches correctly if the "Follow links" checkbox is disabled

FIXED: [ 410120 ] Krusader does not search correctly if the "Follow links" checkbox is disabled
BUG: 410120

Differential Revision: https://phabricator.kde.org/D22666

(cherry picked from commit ce1941db1d8e9f5c5b6ea292cefca97e40f5e7d8)